--- a/Svetosavlje/Data_Layer/Svetosavlje.Interfaces/Svetosavlje.Interfaces.csproj
+++ b/Svetosavlje/Data_Layer/Svetosavlje.Interfaces/Svetosavlje.Interfaces.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\DnevnoCitanje.cs" />
     <Compile Include="Classes\ListaArhiva.cs" />
     <Compile Include="Classes\PitanjeInfo.cs" />
     <Compile Include="Classes\Prolog.cs" />
