--- a/Svetosavlje/Services/Svetosavlje.Services/Svetosavlje.Services.csproj
+++ b/Svetosavlje/Services/Svetosavlje.Services/Svetosavlje.Services.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DummyDatabaseProvider.cs" />
     <Compile Include="MySQLProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SvastaraProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
