Молитве, прича са базом, рунда 1
остало да напуњене објекте прикажем на страници...

--- a/Svetosavlje/Data_Layer/Svetosavlje.Data_Layer/Svetosavlje.Data_Layer.csproj
+++ b/Svetosavlje/Data_Layer/Svetosavlje.Data_Layer/Svetosavlje.Data_Layer.csproj
@@ -52,6 +52,7 @@
     <Compile Include="BlogServices\NewsList.cs" />
     <Compile Include="Core\blogConnection.cs" />
     <Compile Include="Core\dbConnection.cs" />
+    <Compile Include="MySQLServices\MolitveService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MySQLServices\CitanjaList.cs" />
     <Compile Include="MySQLServices\FastingType.cs" />
