--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 passwords.config
 
 #################
+## Svetosavlje log file
+#################
+SvetosavljeLog.txt
+
+#################
 ## Eclipse
 #################
 
