--- a/Svetosavlje/Web/Svetosavlje/Web.config
+++ b/Svetosavlje/Web/Svetosavlje/Web.config
@@ -20,7 +20,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/Account/Login" timeout="2880" name="./AUTHTICKET"/>
     </authentication>
     <pages>
       <namespaces>
