--- a/Svetosavlje/Web/Svetosavlje/admins.config
+++ b/Svetosavlje/Web/Svetosavlje/admins.config
@@ -1,1 +1,9 @@
-﻿<admin>dejanbujak@gmail.com</admin>
+﻿<admins>
+  <admin email="dejanbujak@gmail.com">
+    <role>admin</role>
+  </admin>
+  <admin email="dejan.bujak@noaa.gov">
+    <role>prolog</role>
+    <role>molitve</role>
+  </admin>
+</admins>
