--- a/Svetosavlje/Services/Svetosavlje.Services/Svetosavlje.Services.csproj
+++ b/Svetosavlje/Services/Svetosavlje.Services/Svetosavlje.Services.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountProvider.cs" />
     <Compile Include="AtomBlogProvider.cs" />
     <Compile Include="BlogProvider.cs" />
     <Compile Include="DatabaseProvider.cs" />
